Item240: validation fix for comment plugin line in edit; moved the line out of the topicactions bar; added a bit of spacing.
git-svn-id: http://develop.twiki.org/svn/twiki/branches/DEVELOP/twikiplugins@8030 a00a5322-12db-0310-a70b-8735589c885e

--- a/PatternSkin/pub/TWiki/PatternSkin/style.css
+++ b/PatternSkin/pub/TWiki/PatternSkin/style.css
@@ -783,6 +783,9 @@ input.patternFormFieldVerticalForm {
 
 /* Edit page */
 
+.patternEditPage .patternTopicAction {
+	margin-top:.5em;
+}
 .twikiChangeFormButtonHolder {
 	margin:1em 0;
 	float:right;
